# medic

src/medic/: package.xml  setup.cfg  setup.py
src/medic/config/: nav2_params.yaml
src/medic/launch/: launch.py
src/medic/medic/: navigation.py  obstacle_detection.py  perception.py  robot_controller.py  waypoint_navigator.py
src/medic/worlds/: A1_world.world  qA1_world.world
